--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ext-imagick": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.11",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "ext-imagick": "*"
+        "spatie/browsershot": "^3.57"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
